# SP2023

./: Aud8.5  CMakeLists.txt  README.md  Zadaci  abc.cpp  main.cpp
Auditoriski/: Аудиториски линкови.txt
Auditoriski/1/: Aud1.1.cpp  Aud1.2.cpp  HelloWorld.cpp
Auditoriski/10/: Aud10.1.2.cpp  Aud10.1.cpp  Aud10.2.cpp  Aud10.3.cpp  Aud10.4.cpp  Aud10.5.cpp  Aud10.6.cpp  Aud10.7.cpp  Aud10.8.cpp  Domasna10.9.cpp
Auditoriski/2/: Aud2.1.cpp  Aud2.10.cpp  Aud2.11.cpp  Aud2.12.cpp  Aud2.2.cpp  Aud2.3.cpp  Aud2.4.cpp  Aud2.5.cpp  Aud2.6.cpp  Aud2.7.cpp  Aud2.8.cpp  Aud2.9.cpp
Auditoriski/3/: Aud3.1.cpp  Aud3.2.cpp  Aud3.2Bonus.cpp  Aud3.2Spoeno.cpp  Aud3.3.cpp  Aud3.4.cpp  Aud3.5.cpp  Aud3.6.cpp  Aud3.7.cpp  Aud3.8.1.cpp  Aud3.8.2.cpp  Aud3.9.cpp
Auditoriski/4/: Aud4.1.1.cpp  Aud4.1.2.cpp  Aud4.1.3.cpp  Aud4.10.cpp  Aud4.11.cpp  Aud4.2.1.cpp  Aud4.2.2.cpp  Aud4.2.3.cpp  Aud4.3.cpp  Aud4.4.cpp  Aud4.5.cpp  Aud4.6.cpp  Aud4.7.cpp  Aud4.8.cpp  Aud4.9.cpp  Domasno1.cpp  Domasno2.cpp
Auditoriski/5/: Aud5.1.cpp  Aud5.10.cpp  Aud5.11.cpp  Aud5.12.cpp  Aud5.13.cpp  Aud5.14.cpp  Aud5.15.1.cpp  Aud5.15.2.cpp  Aud5.2.1.cpp  Aud5.2.2.cpp  Aud5.3.1.cpp  Aud5.3.2.cpp  Aud5.3.3.cpp  Aud5.3.4.cpp  Aud5.4.1.cpp  Aud5.4.2.cpp  Aud5.4.3.cpp  Aud5.5.2.cpp  Aud5.5.cpp  Aud5.6.2.cpp  Aud5.6.cpp  Aud5.7.cpp  Aud5.8.cpp  Aud5.9.cpp
Auditoriski/6/: Aud6.1.cpp  Aud6.2.cpp  Aud6.3.cpp  Aud6.4.2.cpp  Aud6.4.cpp  Aud6.5.2.cpp  Aud6.5.cpp  Aud6.6.cpp  Aud6.7.cpp  Aud6.8.2.cpp  Aud6.8.cpp
Auditoriski/7/: Aud7.1.cpp  Aud7.10.cpp  Aud7.2.cpp  Aud7.3.cpp  Aud7.4.cpp  Aud7.5.cpp  Aud7.6.cpp  Aud7.7.cpp  Aud7.8.cpp  Aud7.9.cpp  DiplenjeZadaca.cpp  Domasno7.10.cpp
Auditoriski/8/: Aud8.1.2.cpp  Aud8.1.3.cpp  Aud8.1.cpp  Aud8.2.2.cpp  Aud8.2.cpp  Aud8.3.2.cpp  Aud8.3.cpp  Aud8.4.cpp  Aud8.5.cpp
Auditoriski/9/: Aud9.1.2.cpp  Aud9.1.cpp  Aud9.2.cpp  Aud9.3.2.cpp  Aud9.3.cpp  Aud9.4.cpp  Aud9.5.cpp  Aud9.6.cpp  Aud9.7.cpp  Domasno9.8.cpp  Domasno9.9.cpp
B2BV2/1denVezbi/: Dijagonali.cpp  Rekurzija.cpp  Stringovi.cpp
B2BV2/2denVezbi/: MatricaSort.cpp  NiziSortiranje.cpp  Pokazuvaci.cpp
B2BV2/Agon/: Fibonaci.cpp  Zad1.cpp  Zad4.cpp  Zad5.cpp  ZbirCifri.cpp
B2BV2/Mario/: CitajMatrica.cpp  IstiNizi.cpp  RotacijaNiza.cpp
B2BV2/Tamara/: BinarySearch.cpp  BubbleSort.cpp  InsertionSort.cpp  LinearSearch.cpp  SelectionSort.cpp
B2BV2/Toni/: PolaPola.cpp  PovtoruvanjeBukva.cpp  RelativnaFrekvencija.cpp
B2BV2/Vasilaki/: Datoteki1.cpp
Kolokviumski/: Kontakti.cpp  MaxMinRedica.cpp  MonotonaPodniza.cpp  NajvekeKratenjeSamoglaski.cpp  NazabenaPodniza.cpp  OdzemiSamoglaski.cpp  PreureduvanjeNiza.cpp  PrvPogolemN.cpp  RasteckiN.cpp  RedKolonaPecatenje.cpp  Romb.cpp  SlicniBroevi.cpp  TastaturaZadaca.cpp  Vojnik.cpp  Zelka.cpp  Zmija.cpp  asdfghjkl.cpp
Kolokviumski/Padnati/: Matrica.cpp  PosledovatelenStr.cpp  RekurzijaKolokvium.cpp
KolokviumskiVlatce/: Zmija.cpp
Laboratoriski/10_nedela/: 2niziTekst.cpp  DijagonaliKvadrat.cpp  ZbirPomalOd5.cpp
Laboratoriski/1_nedela/: GodinaPresmetkiNacin1.cpp  GodinaPresmetkiNacin2.cpp  Kombinacija3Broja.cpp  LabsAud1.cpp  SredinaOperaciiNacin1.cpp  SredinaOperaciiNacin2.cpp
Laboratoriski/2_nedela/: 3brojaRedosled.cpp  4broja01.cpp  5cifrenSpecial.cpp  LabsAud2.cpp  Palindrom.cpp
Laboratoriski/3_nedela/: AkademskoOcenuvanje.cpp  Carina.cpp  DrzavaX.cpp  FILM_TESKA.cpp  FiskalniSmetki.cpp  KinoKategorii.cpp  OcenaSansa.cpp  SumaSoInterval.cpp  TelefonskiBroevi.cpp  UpisFINKI.cpp
Laboratoriski/4_nedela/: Bingo.cpp  BrojCIfri.cpp  BrojCifriX.cpp  DeliviParniDeliviNeparni.cpp  Ednakvost2Broja.cpp  Kalkulator.cpp  Palindrom2.cpp  Sifr_poraki.cpp
Laboratoriski/5_nedela/: AbsZadaca.cpp  LabsSreda1.cpp  LabsSreda2.cpp  OceniKolicnik.cpp  PalindromFunkcii.cpp  Parovi.cpp  Swap3broja.cpp
Laboratoriski/6_nedela/: AbsoultnaRazlika.cpp  DodavanjeNiza.cpp  IndeksiSoI.cpp  MinMaxNiza.cpp  OgledalnaNiza.cpp  PaniNeparniNizi.cpp  PogolemiNiza.cpp  ProsekCeni.cpp  ProstaNiza.cpp  SwapMinMax.cpp  ZbirIndeks.cpp  ZbirPodNiza.cpp  kElement.cpp  kElementFinta.cpp  kTrampa.cpp
Laboratoriski/7_nedela/: BrKoloni2.cpp  DesnoOdDijagonala.cpp  DijagonalnoPecatenje.cpp  DiplenjeZadaca.cpp  LetsGoChelsea.cpp  MagicnaMatrica.cpp  MinMaxMatrica.cpp  MinMaxNormalizacija.cpp  NajgolemaKolona.cpp  NegativniiMatrica.cpp  ParenNeparenRed.cpp  ParnaMatrica.cpp  PodDijagonali.cpp  ProsekSporednaDijagonala.cpp  SimetricnaMatrica.cpp  SrednaVrednostProsek.cpp  ZnakDijagonali.cpp
Laboratoriski/8_nedela/: DellivRekurzija.cpp  InteresenBroj.cpp  KvoN.cpp  NeparniElementi.cpp  ObratnoSortiranje.cpp  OpsegRekurzija.cpp  PalindromiCifri.cpp  PokazuvackaEdna.cpp  RasteckRekurzija.cpp  RasteckaNiza.cpp  RekurzivniPalindromi.cpp  SpojuvanjeNizi.cpp  TransformacijRekurzija.cpp  Zigazaga.cpp  Zvezda.cpp
Laboratoriski/9_nedela/: GolemiMali.cpp  Pal.cpp  PodNiza.cpp  Pointers.cpp  RelFreq.cpp
Predavanja/: Matrica1.cpp  Matrica3.cpp  Matrica4.cpp  Oktomvri.cpp  Rekurzija2.cpp  Rekurzija3.cpp  Samoglaska.cpp  Stepen.cpp  Suma2CIfren.cpp  SumaN2CIfren.cpp  Vraboteni.cpp  Z10.cpp  Z9.cpp
Predavanja/RendomShit/: Brojanica.cpp  FINKIPoker.cpp  Factoriel.cpp  Glusec.cpp  KoordPravoagolnik.cpp  Pikseli.cpp  PodredenBr.cpp  SredenBroj.cpp  ZnaciZadaca.cpp
RendomShit/: BrDeliteliCifrBr.cpp  Kval1.cpp  Morze.cpp  SredenBroj2.cpp
ZadaciZaVezbanje1Kolokvium/: 10ta.cpp  10taSoFunkcii.cpp  11ta.cpp  11taSoFunkcii.cpp  12ta.cpp  12taB2B.cpp  13ta.cpp  1va.cpp  2ra.cpp  2raB2B.cpp  3ta.cpp  4ta.cpp  4taB2B.cpp  5ta.cpp  5taB2B.cpp  6ta.cpp  6taB2B.cpp  7ma.cpp  8ma.cpp  8maB2B.cpp  9ta.cpp
ZadaciZaVezbanje2Kolokvium/: 12ta-2.cpp  13ta-2.cpp  14ta-2.cpp  15ta-2.cpp  16ta-2.cpp  17ta-2.cpp  18ta-2.cpp  19ta-2.cpp  1va-2.cpp  3ta-2.cpp  4ta-2.cpp  6ta-2.cpp  7ta-2.cpp  9ta-2.cpp
ZadaciZaVezbanje2Kolokvium/DopolnitelniZadaci/: 10ta-D2.cpp  11ta-D2.cpp  12ta-D2.cpp  1va-D2.cpp  2ra-D2.cpp  3ta-D2.cpp  4ta-D2.cpp  5ta-D2.cpp  6ta-D2.cpp  7ma-D2.cpp  (+2 more)
ZadackiFreeTime/: Elka.cpp  Matrica2.cpp  Rekurzija1.cpp  Rekurzija4.cpp  Rekurzija5.cpp  Rekurzija6.cpp  Rekurzija7.cpp  Rekurzija8.cpp  Rekurzija9.cpp  Z1.cpp  Z2.cpp  Z7.cpp
(+15 files in other folders)
