cmake_minimum_required(VERSION 3.26)
project(SP2023)

set(CMAKE_CXX_STANDARD 17)

add_executable(Oktomvri Predavanja/Oktomvri.cpp)
add_executable(Samoglaska Predavanja/Samoglaska.cpp)
add_executable(Vraboteni Predavanja/Vraboteni.cpp)
add_executable(Suma2Cifren Predavanja/Suma2CIfren.cpp)
add_executable(Suma2NCifren Predavanja/SumaN2CIfren.cpp)
add_executable(Stepen Predavanja/Stepen.cpp)


add_executable(1va ZadaciZaVezbanje1Kolokvium/1va.cpp)
add_executable(2ra ZadaciZaVezbanje1Kolokvium/2ra.cpp)
add_executable(2raB2B ZadaciZaVezbanje1Kolokvium/2raB2B.cpp)
add_executable(3ta ZadaciZaVezbanje1Kolokvium/3ta.cpp)
add_executable(4ta ZadaciZaVezbanje1Kolokvium/4ta.cpp)
add_executable(4taB2B ZadaciZaVezbanje1Kolokvium/4taB2B.cpp)
add_executable(5ta ZadaciZaVezbanje1Kolokvium/5ta.cpp)
add_executable(5taB2B ZadaciZaVezbanje1Kolokvium/5taB2B.cpp)
add_executable(6ta ZadaciZaVezbanje1Kolokvium/6ta.cpp)
add_executable(6taB2B ZadaciZaVezbanje1Kolokvium/6taB2B.cpp)
add_executable(7ma ZadaciZaVezbanje1Kolokvium/7ma.cpp)
add_executable(8ma ZadaciZaVezbanje1Kolokvium/8ma.cpp)
add_executable(8maB2B ZadaciZaVezbanje1Kolokvium/8maB2B.cpp)
add_executable(9ta ZadaciZaVezbanje1Kolokvium/9ta.cpp)
add_executable(10ta ZadaciZaVezbanje1Kolokvium/10ta.cpp)
add_executable(10taSoFunkcii ZadaciZaVezbanje1Kolokvium/10taSoFunkcii.cpp)
add_executable(11ta ZadaciZaVezbanje1Kolokvium/11ta.cpp)
add_executable(11taSoFunkcii ZadaciZaVezbanje1Kolokvium/11taSoFunkcii.cpp)
add_executable(13ta ZadaciZaVezbanje1Kolokvium/13ta.cpp)
add_executable(12ta ZadaciZaVezbanje1Kolokvium/12ta.cpp)
add_executable(12taB2B ZadaciZaVezbanje1Kolokvium/12taB2B.cpp)

add_executable(3ta-2 ZadaciZaVezbanje2Kolokvium/3ta-2.cpp)
add_executable(7ta-2 ZadaciZaVezbanje2Kolokvium/7ta-2.cpp)
add_executable(13ta-2 ZadaciZaVezbanje2Kolokvium/13ta-2.cpp)
add_executable(14ta-2 ZadaciZaVezbanje2Kolokvium/14ta-2.cpp)
add_executable(16ta-2 ZadaciZaVezbanje2Kolokvium/16ta-2.cpp)
add_executable(17ta-2 ZadaciZaVezbanje2Kolokvium/17ta-2.cpp)

add_executable(Kombinacija3Broja Laboratoriski/1_nedela/Kombinacija3Broja.cpp)
add_executable(SredinaOperaciiNacin1 Laboratoriski/1_nedela/SredinaOperaciiNacin1.cpp)
add_executable(SredinaOperaciiNacin2 Laboratoriski/1_nedela/SredinaOperaciiNacin2.cpp)
add_executable(GodinaPresmetkiNacin1 Laboratoriski/1_nedela/GodinaPresmetkiNacin1.cpp)
add_executable(GodinaPresmetkiNacin2 Laboratoriski/1_nedela/GodinaPresmetkiNacin2.cpp)
add_executable(LabsAud1 Laboratoriski/1_nedela/LabsAud1.cpp)

add_executable(LabsAud2 Laboratoriski/2_nedela/LabsAud2.cpp)
add_executable(4broja01 Laboratoriski/2_nedela/4broja01.cpp)
add_executable(Palindrom Laboratoriski/2_nedela/Palindrom.cpp)
add_executable(3brojaRedosled Laboratoriski/2_nedela/3brojaRedosled.cpp)
add_executable(5cifrenSpecial Laboratoriski/2_nedela/5cifrenSpecial.cpp)

add_executable(OcenaSansa Laboratoriski/3_nedela/OcenaSansa.cpp)
add_executable(SumaSoInterval Laboratoriski/3_nedela/SumaSoInterval.cpp)
add_executable(UpisFINKI Laboratoriski/3_nedela/UpisFINKI.cpp)
add_executable(DrzavaX Laboratoriski/3_nedela/DrzavaX.cpp)
add_executable(AkademskoOcenuvanje Laboratoriski/3_nedela/AkademskoOcenuvanje.cpp)
add_executable(TelefonskiBroevi Laboratoriski/3_nedela/TelefonskiBroevi.cpp)
add_executable(FILM_TEKSA Laboratoriski/3_nedela/FILM_TESKA.cpp)
add_executable(KinoKategorii Laboratoriski/3_nedela/KinoKategorii.cpp)
add_executable(Carina Laboratoriski/3_nedela/Carina.cpp)
add_executable(FiskalniSmetki Laboratoriski/3_nedela/FiskalniSmetki.cpp)

add_executable(BrojCifriX Laboratoriski/4_nedela/BrojCifriX.cpp)
add_executable(DeliviParniDeliviNeparni Laboratoriski/4_nedela/DeliviParniDeliviNeparni.cpp)
add_executable(Ednakvost2Broja Laboratoriski/4_nedela/Ednakvost2Broja.cpp)
add_executable(Palindrom2 Laboratoriski/4_nedela/Palindrom2.cpp)
add_executable(BrojCifri Laboratoriski/4_nedela/BrojCIfri.cpp)
add_executable(Kalkulator Laboratoriski/4_nedela/Kalkulator.cpp)
add_executable(Bingo Laboratoriski/4_nedela/Bingo.cpp)
add_executable(Sifr_poraki Laboratoriski/4_nedela/Sifr_poraki.cpp)

add_executable(PalindromFunkcii Laboratoriski/5_nedela/PalindromFunkcii.cpp)
add_executable(AbsZadaca Laboratoriski/5_nedela/AbsZadaca.cpp)
add_executable(Parovi Laboratoriski/5_nedela/Parovi.cpp)
add_executable(LabsSreda1 Laboratoriski/5_nedela/LabsSreda1.cpp)
add_executable(LabsSreda2 Laboratoriski/5_nedela/LabsSreda2.cpp)

add_executable(OgledalnaNiza Laboratoriski/6_nedela/OgledalnaNiza.cpp)
add_executable(ProsekCeni Laboratoriski/6_nedela/ProsekCeni.cpp)
add_executable(ZbirPodNiza Laboratoriski/6_nedela/ZbirPodNiza.cpp)
add_executable(ParniNeparniNizi Laboratoriski/6_nedela/PaniNeparniNizi.cpp)
add_executable(ProstaNiza Laboratoriski/6_nedela/ProstaNiza.cpp)
add_executable(PogolemiNiza Laboratoriski/6_nedela/PogolemiNiza.cpp)
add_executable(DodavanjeNiza Laboratoriski/6_nedela/DodavanjeNiza.cpp)
add_executable(kTrampa Laboratoriski/6_nedela/kTrampa.cpp)
add_executable(kElement Laboratoriski/6_nedela/kElement.cpp)
add_executable(ZbirIndeks Laboratoriski/6_nedela/ZbirIndeks.cpp)
add_executable(AbsolutnaRazlika Laboratoriski/6_nedela/AbsoultnaRazlika.cpp)

add_executable(ParnaMatrica Laboratoriski/7_nedela/ParnaMatrica.cpp)
add_executable(PodDijagonali Laboratoriski/7_nedela/PodDijagonali.cpp)
add_executable(MagicnaMatrica Laboratoriski/7_nedela/MagicnaMatrica.cpp)
add_executable(NajgolemaKolona Laboratoriski/7_nedela/NajgolemaKolona.cpp)
add_executable(DijagonalnoPecatenje Laboratoriski/7_nedela/DijagonalnoPecatenje.cpp)
add_executable(NegativniMatrica Laboratoriski/7_nedela/NegativniiMatrica.cpp)
add_executable(ZnakDijagonali Laboratoriski/7_nedela/ZnakDijagonali.cpp)
add_executable(MinMaxNormalizacija Laboratoriski/7_nedela/MinMaxNormalizacija.cpp)


add_executable(HelloWorld Auditoriski/1/HelloWorld.cpp)
add_executable(Aud1.1 Auditoriski/1/Aud1.1.cpp)
add_executable(Aud1.2 Auditoriski/1/Aud1.2.cpp)

add_executable(KoordPravoagolnik RendomShit/KoordPravoagolnik.cpp)
add_executable(Glusec RendomShit/Glusec.cpp)
add_executable(FINKIPoker RendomShit/FINKIPoker.cpp)
add_executable(ZnaciZadaca RendomShit/ZnaciZadaca.cpp)
add_executable(Morze RendomShit/Morze.cpp)
add_executable(Brojanica RendomShit/Brojanica.cpp)
add_executable(SredenBroj RendomShit/SredenBroj.cpp)
add_executable(SredenBroj2 RendomShit/SredenBroj2.cpp)
add_executable(Kval1 RendomShit/Kval1.cpp)
add_executable(Pikseli RendomShit/Pikseli.cpp)
add_executable(Factoriel RendomShit/Factoriel.cpp)
add_executable(BrDeliteliCifrBr RendomShit/BrDeliteliCifrBr.cpp)
add_executable(PodredenBr RendomShit/PodredenBr.cpp)


add_executable(Aud2.1 Auditoriski/2/Aud2.1.cpp)
add_executable(Aud2.2 Auditoriski/2/Aud2.2.cpp)
add_executable(Aud2.3 Auditoriski/2/Aud2.3.cpp)
add_executable(Aud2.4 Auditoriski/2/Aud2.4.cpp)
add_executable(Aud2.5 Auditoriski/2/Aud2.5.cpp)
add_executable(Aud2.6 Auditoriski/2/Aud2.6.cpp)
add_executable(Aud2.7 Auditoriski/2/Aud2.7.cpp)
add_executable(Aud2.8 Auditoriski/2/Aud2.8.cpp)
add_executable(Aud2.9 Auditoriski/2/Aud2.9.cpp)
add_executable(Aud2.10 Auditoriski/2/Aud2.10.cpp)
add_executable(Aud2.11 Auditoriski/2/Aud2.11.cpp)
add_executable(Aud2.12 Auditoriski/2/Aud2.12.cpp)

add_executable(Aud3.1 Auditoriski/3/Aud3.1.cpp)
add_executable(Aud3.2 Auditoriski/3/Aud3.2.cpp)
add_executable(Aud3.2Bonus Auditoriski/3/Aud3.2Bonus.cpp)
add_executable(Aud3.3 Auditoriski/3/Aud3.3.cpp)
add_executable(Aud3.4 Auditoriski/3/Aud3.4.cpp)
add_executable(Aud3.5 Auditoriski/3/Aud3.5.cpp)
add_executable(Aud3.6 Auditoriski/3/Aud3.6.cpp)
add_executable(Aud3.7 Auditoriski/3/Aud3.7.cpp)
add_executable(Aud3.8.1 Auditoriski/3/Aud3.8.1.cpp)
add_executable(Aud3.8.2 Auditoriski/3/Aud3.8.2.cpp)
add_executable(Aud3.9 Auditoriski/3/Aud3.9.cpp)
add_executable(Aud3.2Spoeno Auditoriski/3/Aud3.2Spoeno.cpp)

add_executable(Aud4.1.1 Auditoriski/4/Aud4.1.1.cpp)
add_executable(Aud4.1.2 Auditoriski/4/Aud4.1.2.cpp)
add_executable(Aud4.1.3 Auditoriski/4/Aud4.1.3.cpp)
add_executable(Aud4.2.1 Auditoriski/4/Aud4.2.1.cpp)
add_executable(Aud4.2.2 Auditoriski/4/Aud4.2.2.cpp)
add_executable(Aud4.2.3 Auditoriski/4/Aud4.2.3.cpp)
add_executable(Aud4.3 Auditoriski/4/Aud4.3.cpp)
add_executable(Aud4.4 Auditoriski/4/Aud4.4.cpp)
add_executable(Aud4.5 Auditoriski/4/Aud4.5.cpp)
add_executable(Aud4.6 Auditoriski/4/Aud4.6.cpp)
add_executable(Aud4.8 Auditoriski/4/Aud4.8.cpp)
add_executable(Aud4.9 Auditoriski/4/Aud4.9.cpp)
add_executable(Aud4.10 Auditoriski/4/Aud4.10.cpp)
add_executable(Aud4.11 Auditoriski/4/Aud4.11.cpp)
add_executable(Domasno1 Auditoriski/4/Domasno1.cpp)
add_executable(Domasno2 Auditoriski/4/Domasno2.cpp)

add_executable(Aud5.1 Auditoriski/5/Aud5.1.cpp)
add_executable(Aud5.2.1 Auditoriski/5/Aud5.2.1.cpp)
add_executable(Aud5.2.2 Auditoriski/5/Aud5.2.2.cpp)
add_executable(Aud5.3.1 Auditoriski/5/Aud5.3.1.cpp)
add_executable(Aud5.3.2 Auditoriski/5/Aud5.3.2.cpp)
add_executable(Aud5.3.3 Auditoriski/5/Aud5.3.3.cpp)
add_executable(Aud5.3.4 Auditoriski/5/Aud5.3.4.cpp)
add_executable(Aud5.4.1 Auditoriski/5/Aud5.4.1.cpp)
add_executable(Aud5.4.2 Auditoriski/5/Aud5.4.2.cpp)
add_executable(Aud5.4.3 Auditoriski/5/Aud5.4.3.cpp)
add_executable(Aud5.5 Auditoriski/5/Aud5.5.cpp)
add_executable(Aud5.5.2 Auditoriski/5/Aud5.5.2.cpp)
add_executable(Aud5.6 Auditoriski/5/Aud5.6.cpp)
add_executable(Aud5.6.2 Auditoriski/5/Aud5.6.2.cpp)
add_executable(Aud5.7 Auditoriski/5/Aud5.7.cpp)
add_executable(Aud5.8 Auditoriski/5/Aud5.8.cpp)
add_executable(Aud5.9 Auditoriski/5/Aud5.9.cpp)
add_executable(Aud5.10 Auditoriski/5/Aud5.10.cpp)
add_executable(Aud5.11 Auditoriski/5/Aud5.11.cpp)
add_executable(Aud5.12 Auditoriski/5/Aud5.12.cpp)
add_executable(Aud5.13 Auditoriski/5/Aud5.13.cpp)
add_executable(Aud5.14 Auditoriski/5/Aud5.14.cpp)
add_executable(Aud5.15.1 Auditoriski/5/Aud5.15.1.cpp)
add_executable(Aud5.15.2 Auditoriski/5/Aud5.15.2.cpp)

add_executable(Aud6.1 Auditoriski/6/Aud6.1.cpp)
add_executable(Aud6.2 Auditoriski/6/Aud6.2.cpp)
add_executable(Aud6.3 Auditoriski/6/Aud6.3.cpp)
add_executable(Aud6.4 Auditoriski/6/Aud6.4.cpp)
add_executable(Aud6.4.2 Auditoriski/6/Aud6.4.2.cpp)
add_executable(Aud6.5 Auditoriski/6/Aud6.5.cpp)
add_executable(Aud6.5.2 Auditoriski/6/Aud6.5.2.cpp)
add_executable(Aud6.6 Auditoriski/6/Aud6.6.cpp)
add_executable(Aud6.7 Auditoriski/6/Aud6.7.cpp)
add_executable(Aud6.8 Auditoriski/6/Aud6.8.cpp)
add_executable(Aud6.8.2 Auditoriski/6/Aud6.8.2.cpp)

add_executable(Aud7.1 Auditoriski/7/Aud7.1.cpp)
add_executable(Aud7.2 Auditoriski/7/Aud7.2.cpp)
add_executable(Aud7.3 Auditoriski/7/Aud7.3.cpp)
add_executable(Aud7.4 Auditoriski/7/Aud7.4.cpp)
add_executable(Aud7.5 Auditoriski/7/Aud7.5.cpp)
add_executable(Aud7.6 Auditoriski/7/Aud7.6.cpp)
add_executable(Aud7.7 Auditoriski/7/Aud7.7.cpp)
add_executable(Aud7.8 Auditoriski/7/Aud7.8.cpp)
add_executable(Aud7.9 Auditoriski/7/Aud7.9.cpp)
add_executable(Aud7.10 Auditoriski/7/Aud7.10.cpp)
add_executable(Domasno7.10 Auditoriski/7/Domasno7.10.cpp)
add_executable(DiplenjeZadaca Laboratoriski/7_nedela/DiplenjeZadaca.cpp)

add_executable(Aud8.1 Auditoriski/8/Aud8.1.cpp)
add_executable(Aud8.1.2 Auditoriski/8/Aud8.1.2.cpp)
add_executable(Aud8.1.3 Auditoriski/8/Aud8.1.3.cpp)
add_executable(Aud8.2 Auditoriski/8/Aud8.2.cpp)
add_executable(Aud8.2.2 Auditoriski/8/Aud8.2.2.cpp)
add_executable(Aud8.3 Auditoriski/8/Aud8.3.cpp)
add_executable(Aud8.3.2 Auditoriski/8/Aud8.3.2.cpp)
add_executable(Aud8.4 Auditoriski/8/Aud8.4.cpp)
add_executable(Aud8.5 Auditoriski/8/Aud8.5.cpp)

add_executable(Aud9.1 Auditoriski/9/Aud9.1.cpp)
add_executable(Aud9.2 Auditoriski/9/Aud9.2.cpp)
add_executable(Aud9.3 Auditoriski/9/Aud9.3.cpp)
add_executable(Aud9.4 Auditoriski/9/Aud9.4.cpp)
add_executable(Aud9.5 Auditoriski/9/Aud9.5.cpp)
add_executable(Aud9.6 Auditoriski/9/Aud9.6.cpp)
add_executable(Aud9.7 Auditoriski/9/Aud9.7.cpp)
add_executable(Domasno9.8 Auditoriski/9/Domasno9.8.cpp)
add_executable(Domasno9.9 Auditoriski/9/Domasno9.9.cpp)

add_executable(Z1 ZadackiFreeTime/Z1.cpp)
add_executable(Z2 ZadackiFreeTime/Z2.cpp)
add_executable(Z7 ZadackiFreeTime/Z7.cpp)
add_executable(Z9 ZadackiFreeTime/Z9.cpp)
add_executable(Z10 ZadackiFreeTime/Z10.cpp)
add_executable(Matrica1 ZadackiFreeTime/Matrica1.cpp)
add_executable(Matrica2 ZadackiFreeTime/Matrica2.cpp)
add_executable(Matrica3 ZadackiFreeTime/Matrica3.cpp)
add_executable(Matrica4 ZadackiFreeTime/Matrica4.cpp)
add_executable(Elka ZadackiFreeTime/Elka.cpp)



